--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ body {
     font-size: 12px;
 }
 
+
+.ds-social li a:hover {
+    background-color: #000;
+    cursor: pointer;
+}
+
 /* Banner */
 .ds-banner {
     margin-top: 180px;
@@ -216,6 +222,13 @@ img {
     border-radius: 60px;
     text-decoration: none;
 }
+
+.ds-button:hover {
+    color: #FFF;
+    background-color: #F26464;
+    cursor: pointer;
+}
+
 
 /* Skills */
 .ds-skills-section {
