--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ html {
     /* Hành vi khi cuộn */
 }
 
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
 body {
     font-family: 'Inter', sans-serif;
 }
@@ -20,10 +25,16 @@ body {
     top: 0;
     position: fixed;
     width: 100%;
-    /* z-index: 5; */
+    z-index: 5;
     background-color: #fff;
     padding: 70px 0;
+    /* transition: padding 0.3s, box-shadow 0.3s; */
 }
+
+/* .ds-header.ds-fixed-header {
+    padding: 20px 0;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+} */
 
 .container {
     width: 90%;
@@ -123,6 +134,7 @@ figure {
 figure img {
     max-width: 100%;
     height: auto;
+    vertical-align: middle;
 }
 
 img {
@@ -256,4 +268,160 @@ img {
     margin-right: 15px;
     margin-bottom: 15px;
     font-weight: 500;
+}
+
+/* Experience */
+.ds-experience-section {
+    padding-bottom: 120px;
+}
+
+.ds-experience-list {
+    padding-top: 15px;
+}
+
+.ds-experience-list section {
+    padding-right: 70px;
+}
+
+span.ds-year {
+    color: #373737;
+    font-size: 14px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.ds-experience-list span {
+    display: block;
+}
+
+.ds-officename {
+    font-size: 24px;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+
+span.ds-department {
+    color: #373737;
+    font-weight: 500;
+    font-size: 18px;
+    padding-bottom: 30px;
+}
+
+.ds-experience-list p {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    /* margin-top: 0;
+    margin-bottom: 1rem; */
+}
+
+.ds-experience-list ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-top: 10px;
+}
+
+.ds-experience-list ul li {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    padding-left: 28px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.ds-experience-list ul li::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 10px;
+    border-radius: 100%;
+    background-color: #373737;
+    width: 8px;
+    height: 8px;
+}
+
+/* Work */
+.ds-work-section {
+    padding-bottom: 80px;
+}
+
+.ds-work-list {
+    padding: 40px 70px 0 70px;
+    background-color: #F6F8FA;
+    margin-bottom: 40px;
+}
+
+.ds-work-list section {
+    padding-top: 20px;
+    padding-right: 120px;
+}
+
+.ds-work-title {
+    color: #000;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.ds-work-list p {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+}
+
+.ds-work-list .ds-button {
+    margin-top: 20px;
+}
+
+/* Footer */
+
+.ds-footer {
+    background-color: #000;
+    padding: 120px 0;
+}
+
+.ds-footer section {
+    padding-bottom: 97px;
+}
+
+.ds-footer section span {
+    color: rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: block;
+    padding-bottom: 20px;
+}
+
+.ds-footer section h4 {
+    color: #FFF;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+
+.ds-footer section p {
+    letter-spacing: 1.13px;
+    color: #FFF;
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+.ds-copyright {
+    color: rgba(255, 255, 255, 0.5);
+    letter-spacing: 1px;
+    font-size: 16px;
+}
+
+.ds-copyright a {
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+}
+
+.ds-copyright a:hover {
+    color: #F26464;
 }
